[package]
name = "relational-graphql-derive"
version = "0.1.0"
edition = "2021"
authors = ["Jeb Bearer <jeb.bearer@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6"
itertools = "0.10"
proc-macro2 = "1.0"
proc-macro-crate = "1.3"
quote = "1.0"
syn = "2.0"

[dev-dependencies]
async-std = "1.12"
relational-graphql = { path = "../relational-graphql" }
