[package]
name = "relational-graphql"
version = "0.1.0"
edition = "2021"
authors = ["Jeb Bearer <jeb.bearer@gmail.com>"]

[features]
default = ["postgres"]
postgres = []
mocks = []

[dependencies]
async-graphql = "5.0"
async-trait = "0.1"
color-eyre = "0.6"
derivative = "2.2"
derive_more = "0.99"
generic-array = "0.14"
is_type = "0.2"
relational-graphql-derive = { path = "../relational-graphql-derive" }
sealed = "0.4"
snafu = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SQL dependencies
async-postgres = "0.5"
async-std = { version = "1.12", features = ["attributes"] }
bytes = "0.5"
convert_case = "0.6"
futures = "0.3"
itertools = "0.10"
take_mut = "0.2"
tokio-postgres = { version = "0.5", default-features = false, features = ["runtime"] }

[dev-dependencies]
proptest = "1.1"
rand = "0.8"
