[package]
name = "relational-graphql"
version = "0.1.0"
edition = "2021"
authors = ["Jeb Bearer <jeb.bearer@gmail.com>"]

[features]
default = ["postgres"]
sql = ["convert_case", "futures", "itertools", "take_mut"]
postgres = ["sql", "async-postgres", "async-std", "bytes", "tokio-postgres"]
mocks = ["sql"]

[dependencies]
async-graphql = "5.0"
async-trait = "0.1"
color-eyre = "0.6"
derivative = "2.2"
derive_more = "0.99"
generic-array = "0.14"
is_type = "0.2"
relational-graphql-derive = { path = "../relational-graphql-derive" }
sealed = "0.4"
snafu = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SQL dependencies
convert_case = { version = "0.6", optional = true }
futures = { version = "0.3", optional = true }
itertools = { version = "0.10", optional = true }
take_mut = { version = "0.2", optional = true }

# Postgres dependencies
async-postgres = { version = "0.5", optional = true }
async-std = { version = "1.12", features = ["attributes"], optional = true }
bytes = { version = "0.5", optional = true }
tokio-postgres = { version = "0.5", default-features = false, features = ["runtime"], optional = true }

[dev-dependencies]
proptest = "1.1"
rand = "0.8"
